modified css to prevent horizontal text overflow

--- a/src/main/resources/static/css/cabal.css
+++ b/src/main/resources/static/css/cabal.css
@@ -30,6 +30,7 @@ body {
     margin-bottom: 10px;
     background: linear-gradient( rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75) );
     padding: 10px;
+    overflow-wrap: break-word;
 }
 
 .ecomment {
